2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* cap.h (as_dump_from): Remove declaration.

2008-06-16  Neal H. Walfield  <neal@gnu.org>

	* addr.h (addr_add): New function.
	(addr_sub): Likewise.

2008-06-11  Neal H. Walfield  <neal@gnu.org>

	* trace.h: Include <s-printf.h>.

2008-06-05  Neal H. Walfield  <neal@gnu.org>

	* cap.h: Don't include <pthread.h>.
	(as_lock): Remove declaration.
	(cap_lookup_rel): Likewise.
	(object_lookup_rel): Likewise.
	(slot_lookup_rel): Likewise.

2008-06-03  Neal H. Walfield  <neal@gnu.org>

	* trace.h (struct trace_buffer): New fields nobacktrace, notid,
	and nolock.
	(TRACE_BUFFER_INIT): New macro.
	(trace_buffer_add): Only lock if BUFFER->NOLOCK is not set.  Only
	print the caller's tid if BUFFER->NOTID is not set.  Only print a
	backtrack if BUFFER->NOBACKTRACE is not set.
	(trace_buffer_dump): Only lock if BUFFER->NOLOCK is not set.  Loop
	while PROCESSED, not OFFSET, is less than BUFFER->WRITTEN.

2008-05-31  Neal H. Walfield  <neal@gnu.org>

	* trace.h [RM_INTERN]: Don't include <hurd/mutex.h>, include
	"../viengoos/mutex.h".

2008-05-30  Neal H. Walfield  <neal@gnu.org>

	* trace.h: New file.
	* Makefile.am (includehurd_HEADERS): Add trace.c.
	* headers.m4: Link sysroot/include/hurd/trace.h to trace.h.

2008-05-29  Thomas Schwinge  <tschwinge@gnu.org>

	* stddef.h (S_PRINTF, S_PUTCHAR): Also consider [_ENABLE_TESTS].
	* headers.m4: Link files into `sysroot/include/' instead of `include/'.

	* Makefile.am (t_addr_CPPFLAGS, t_addr_trans_CPPFLAGS, t_rpc_CPPFLAGS):
	Remove special `printf' handling.

	* stddef.h (S_PUTCHAR): Define analogously to `S_PRINTF'.

2008-05-29  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Include <hurd/stddef.h>.
	[ASM]: Only define relevant macros.
	(EXCEPTION_STACK_SIZE_LOG2): Define.
	(EXCEPTION_STACK_SIZE): Define.
	* stddef.h [ASM]: Only define relevant macros.
	(PAGESIZE): Don't append C type specifier.
	(PAGESIZE_LOG2): Likewise.

2008-05-28  Neal H. Walfield  <neal@gnu.org>
